<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_drug"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.leeph.smartlaps.Drug.DrugActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPVA"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/strPVA" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnWater"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/strWater" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnEthanol"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/strEthanol" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnToluene"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/strToluene" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnBenzene"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/strBenzene" />
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>
