<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_safety_rule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leeph.smartlaps.SafetyRuleActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                style="@style/ElevationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/laboratorySafetyInstructions" />

                <TextView
                    style="@style/DetailTextView"
                    android:text="@string/laboratorySafetyInstructionDetail" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:background="#ffffff"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/laboratorySafetyInstruction2" />

                <TextView
                    style="@style/DetailTextView"
                    android:text="@string/laboratorySafetyInstructionDetail2" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>
